appId: com.itsryanthedev.whereip
---
- openLink: exp+where-ip://expo-development-client/?url=http%3A%2F%2F10.0.2.2%3A8081
- runFlow:
    when:
      visible: "Acknowledge and continue"
    commands:
      - tapOn: "Acknowledge and continue"
- runFlow:
    when:
      visible: "Continue"
    commands:
      - tapOn: "Continue"
- runFlow:
    when:
      visible: "Go home"
    commands:
      - tapOn: "Go home"
- runFlow:
    when:
      visible: "http://10.0.2.2:8081"
    commands:
      - tapOn: "http://10.0.2.2:8081"
- extendedWaitUntil:
    visible: "Up to date"
    timeout: 120000
- openLink: whereip://about
- extendedWaitUntil:
    visible: "Simple by design."
    timeout: 15000
- takeScreenshot: s04
