appId: com.itsryanthedev.whereip
---
- openLink: exp+where-ip://expo-development-client/?url=http%3A%2F%2F10.0.2.2%3A8081
- tapOn: "Acknowledge and continue"
- extendedWaitUntil:
    visible: "Provider,"
    timeout: 90000
- takeScreenshot: s01
- tapOn: "Provider,"
- extendedWaitUntil:
    visible: "Preferred IP information provider"
    timeout: 10000
- takeScreenshot: s03
- tapOn: "Dismiss provider menu"
- tapOn: "About WhereIP and privacy"
- extendedWaitUntil:
    visible: "About WhereIP"
    timeout: 15000
- takeScreenshot: s04
